fixed input view on IOs

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -205,6 +205,7 @@ body {
             width: 500px;
             height: 60px; 
             border: none;
+            border-radius: 0;
             padding-left: 126px;
             letter-spacing: 2.2px;
             &:focus {
